bk_ida/gccida/c3/asm_fprintf
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/asm_fprintf/src/final.c:4002:29: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( _DWORD)v8 == 46 || ( sch_istable[( unsigned __int8)v8] & 4) != 0 ) 
                            ^~~~~~~~~~~
                            _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/asm_fprintf/src/final.c:4014:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v8] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/asm_fprintf/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/asm_fprintf/src/obj/final.o] Error 1
